--- a/signin.html
+++ b/signin.html
@@ -21,26 +21,19 @@
         <div class="box">
             <i class="fa fa-envelope"></i>
             <input type="email" name="email" id="email" placeholder="Enter Your Email">
+            <p id="emailerror">Please Enter A Valid Email</p>
         </div>
         <div class="box">
             <i class="fa fa-key"></i>
             <input type="password" name="password" id="password" placeholder="Enter Your Password">
+            <p id="passworderror">Enter a valid password. (_,@,$,&,0-9 and Alphabets are only allowed and length greater than 8 and less tha 20)</p>
         </div>
         <div class="btn-div">
             <button id="SignUpButton" class="btn" type="submit"><a href="contact.html">SignUp</a></button>
-            <button id="LoginButton" class="btn" type="submit" value="submit">LogIn</button>
+            <button id="LoginButton" class="btn" type="submit" value="submit"><a href="music.html">Login</a></button>
         </div>
     </div>
-    <script>
-        const login = document.getElementById('LoginButton');
-        login.addEventListener('click', () => {
-            window.location.replace('music.html')
-        });
-        const signup = document.getElementById('SignUpButton');
-        signup.addEventListener('click', () => {
-            window.location.replace('contact.html')
-        })
-    </script>
+    <script src="signin.js"></script>
 </body>
 
 </html>
