--- a/signin.html
+++ b/signin.html
@@ -26,7 +26,7 @@
         <div class="box">
             <i class="fa fa-key"></i>
             <input type="password" name="password" id="password" placeholder="Enter Your Password">
-            <p id="passworderror">Enter a valid password. (_,@,$,&,0-9 and Alphabets are only allowed and length greater than 8 and less tha 20)</p>
+            <p id="passworderror">Enter a valid password. (_,@,$,&,0-9 and Alphabets are<br> only allowed and length greater than 8 and less tha 20)</p>
         </div>
         <div class="btn-div">
             <button id="SignUpButton" class="btn" type="submit"><a href="contact.html">SignUp</a></button>
