--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <div class="box">
             <i class="fa fa-key"></i>
             <input type="password" name="password" id="password" placeholder="Create Your Password">
-            <p id="passworderror">Enter a valid password. (_,@,$,&,0-9 and Alphabets are only allowed and length greater than 8 and less tha 20)</p>
+            <p id="passworderror">Enter a valid password. (_,@,$,&,0-9 and Alphabets are<br> only allowed and length greater than 8 and less tha 20)</p>
         </div>
         <div class="box">
             <i class="fa fa-key"></i>
