--- a/music.html
+++ b/music.html
@@ -17,15 +17,15 @@
     <img src="musimg.jpg" alt="" id="bg">
     <!-- navbar part -->
     <div class="navbar">
-        <a href="index.html" id="logo"><i class='bx bxs-bar-chart-alt-2' ></i>&nbsp;MUSIFY</a>
+        <a href="/" id="logo"><i class='bx bxs-bar-chart-alt-2' ></i>&nbsp;MUSIFY</a>
         <a onclick="open_close_menu()" id="responsive_menu"><i class='bx bxs-chevron-down' ></i></a>
 
         <div class="nav_content">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#track">Tracks</a></li>
             <li><a href="#user_comments">Comments</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html">Logout</a></li>
+            <li><a href="/">Logout</a></li>
         </div>
 
         <a onclick="menu_action()" id="menu_btn"><i class='bx bx-menu-alt-left'></i></a>
